Updating Project Profiles - PracticePal, Title Pipe, Backlog
Updated the content and images for the following projects: PracticePal, Title Pipe, and the Backlogging Tool.

Also, updating header image to be a smaller size optimized for web.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/roma7.png);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/roma8.png);" >
                 <!-- header background image -->
                 <img class="coda-background-img" align=right src="img/roma7.png" alt="header image">
                 <div class="coda-top-panel">
@@ -680,7 +680,13 @@
                                 <header class="coda-pop-up-header">
                                     <h3>PracticePal</h3>
                                 </header>
-                                <p>PracticePal is the coolest</p>
+                                <p><a href="http://www.practicepal.io">PracticePal.io</a> is a forward thinking application that is disrupting the optometry industry.<br><br>
+                                    For the past two years, I have been leading a team of highly skilled UX/UI Designers, Project Managers, 
+                                    and FE / BE Developers to build a never before seen Eligibility / Benefits Patient Lookup tool as well as an Optical Sales tool that
+                                    deciphers the patient's plan and instantly shows the patient's copay amounts for all inventory at the practice. No more confusion on
+                                    what a patient owes.
+
+                                </p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
@@ -705,8 +711,7 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/rytsarweb.jpg" alt="rytsarweb">
-                                <img class="coda-img-responsive" src="img/rytsarapp.jpg" alt="rytsarapp">
+                                <img class="coda-img-responsive" src="img/PPOpticalSalesTool.gif" alt="OST">
                             </div>
                         </div>
                     </div>
@@ -746,7 +751,9 @@
                                 <header class="coda-pop-up-header">
                                     <h3>Title Pipe</h3>
                                 </header>
-                                <p>Title Pipe is the coolest.</p>
+                                <p><a href="https://www.titlepipe.com">Title Pipe</a> has set out to streamline the entire real estate transaction process for all transaction participants.<br><br>
+                                As Lead Product Manager, I have helped drive the vision of this enterprise level, complex application that involves a revolutionary invitation/onboarding feature, 
+                                document management, as well as an "auto task" management feature (to name a few). </p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
@@ -763,8 +770,8 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
+                                <img class="coda-img-responsive" src="img/titlepipe1.png" alt="tp">
+                                <img class="coda-img-responsive" src="img/tp2.png" alt="tp2">
                             </div>
                         </div>
                     </div>
@@ -804,7 +811,12 @@
                                 <header class="coda-pop-up-header">
                                     <h3>Internal Backlog Tool</h3>
                                 </header>
-                                <p>Created a fully fleshed out product backlogging & requirements gathering process and Google Sheet tool that was then applied as a requirement for all projects company-wide.
+                                <p>Created a fully fleshed out product backlogging & requirements gathering process and Google Sheet tool 
+                                    that was then applied as a requirement for all projects company-wide.<br><br>
+                                    A Product Backlog is a major communication tool that helps unify the expectations and requirements 
+                                    for both the Client / Stakeholders as well as the Product Team.<br><br> A good Product Backlog can be used
+                                    to align vision, to negotiate / discuss priorities (what should we do first?), to capture ideas / new requirements,
+                                    and to get an overall understanding of timeline and effort remaining.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
@@ -821,11 +833,7 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/brtc1.JPG" alt="brtc1">
-                                <img class="coda-img-responsive" src="img/brtc2.JPG" alt="brtc2">
-                                <img class="coda-img-responsive" src="img/brtc3.JPG" alt="brtc3">
-                                <img class="coda-img-responsive" src="img/brtc4.JPG" alt="brtc4">
-                                <img class="coda-img-responsive" src="img/brtc5.JPG" alt="brtc5">
+                                <img class="coda-img-responsive" src="img/Backlog2.png" alt="backlog">
                             </div>
                         </div>
                     </div>
