Fix for the header photo
Corrected file name reference for header photo.

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/roma8.png);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/roma8.jpg);" >
                 <!-- header background image -->
-                <img class="coda-background-img" align=right src="img/roma7.png" alt="header image">
+                <img class="coda-background-img" align=right src="img/roma8.jpg" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
