Updated Job Experience Section
Worked on Previous Experience section and specifically added to "Product Manager" section. Also, made some tweaks to the "A Little Note" section.

--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@
                           <p>Thanks for stopping by! Before I share my work experience and recent projects with you,<br> I wanted to let you in on some things that are super important to me:<br><br><br> 
                             
                             <h4>1. I want to make people’s lives <span class="coda-underscore coda-active">BETTER</span></h4><br>
-                            Digital Products can literally change how people live their lives, how they work, how they enjoy their free time, 
+                            Apps can literally change how people live their lives, how they work, how they enjoy their free time, 
                             and how they manage their money. I've had my life completely changed by finding apps that uniquely answered some specific 
                             pain point or consistent struggle in my life (Google Sheets, Todoist, and YNAB are a few). 
                             I believe digital products will continue to transform our lives for the better and it makes me super happy that I get to contribute to that! <br><br><br><br><br>
 
                             <h4>2. I like <span class="coda-underscore coda-active">DIGGING</span> into complex problems</h4><br>
                             There's nothing like learning about the ins and outs of a problem, of looking at it from every angle, and of coming up with a solution that 
-                            not only resolves the pain point, but takes the user's experience from just "fixed" to absolutely delightful. It takes a certain type of curiosity,
-                            to not be afraid of the unknown, of jumping into the abyss, of following lines of thinking and questions through to their end. To gain perspective 
-                            and context, to begin to see the larger systems at play that exist outside the realm of the initial problem.. Yeah, I like that stuff.  <br><br><br><br><br>
+                            not only resolves the pain point, but takes the user's experience from just "fixed" to absolutely delightful. It takes a certain type of curiosity 
+                            to not be afraid of the unknown; to jump into the abyss, to follow lines of thinking and questions through to their end. And then to finally gain perspective 
+                            and deep, contextual understanding; to begin to see the larger systems at play that exist outside the realm of the initial problem.. Yeah, I like that stuff. :)  <br><br><br><br><br>
 
                             <h4>3. I love <span class="coda-underscore coda-active">DESTROYING</span> the boring, menial stuff people don't want to do at work anymore</h4><br>
                             I've worked in all kinds of different jobs and industries in the early part of my career (have held positions as a School Records Clerk, 
                             a Head Secretary, an Inventory Pricing Auditor, an Account Coordinator, among a few others), and after 
                             getting a grasp on the job, I would quickly get discouraged when I'd have to do some menial tasks over and over again on a daily, 
-                            weekly, and monthly basis. I love helping people get efficient in the tedious areas of work so they can be free to focus on the meaningful 
+                            weekly, or monthly basis. I love helping people get efficient in the tedious areas of work so they can be free to focus on the meaningful 
                             and impactful things instead.<br><br><br><br>
 
                             Anyways... Now let's get down to the nitty gritty...</p>  
@@ -230,7 +230,7 @@
                                 <div class="coda-timeline-label">timeline</div>
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2019 - present</p>
+                                    <p class="coda-time-interval">2018 - present</p>
                                     <h4 class="coda-underscore">Senior Product Manager</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
@@ -242,7 +242,7 @@
                                 <!-- end experience timeline caption -->
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2016 - 2018</p>
+                                    <p class="coda-time-interval">2015 - 2017</p>
                                     <h4 class="coda-underscore">Efficiency Analyst</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
@@ -280,7 +280,7 @@
                                         <p class="coda-time-interval">2018 - present</p>
                                         <h3>Senior Product Manager</h3>
                                     </header>
-                                    <p>I'm currently working at a pretty freaking awesome digital product agency called Ventive. We build apps for clients in a variety of different industries and capacities.</p>
+                                    <p>I'm currently working at a pretty darn cool digital product agency called Ventive. We build apps for clients in a variety of different industries and capacities.</p>
                                     <p>In my role, I lead teams of UX/UI and visual designers, technical project managers, lead engineers, and BE/FE developers to take our client's vision from the back of the napkin to the real deal. I absolutely love getting to know the industry and people that my products apply to, and collaborating with everyone involved in building out the product.</p>
                                     <p>Right now, I'm working on 3 different projects that apply to 3 completely different industries: Optometry, Residential Real Estate, and Medical Supply Ordering.</p>
 
@@ -292,21 +292,18 @@
                                         <p class="coda-time-interval">2017 - 2018</p>
                                         <h3>Product Manager</h3>
                                     </header>
-                                    <p>Architected a Learning Management System/Training Center for new and current clients of enterprise software 
-                                        by developing a complex Wordpress site including software documentation, FAQs, a video library, and a 
+                                    <p>I used to work for a DSD / Warehouse Management Software company where I launched a Learning Management System/Training Center for new and current clients of their enterprise software 
+                                        by developing a website that included software documentation, FAQs, a video library, and a 
                                         comprehensive implementation process involving over 20 training videos that I scripted and produced using 
                                         Premiere Pro.</p>
-                                    <p>Worked with developers within agile sprints to redesign and update the UX and UI of half finished web app. 
-                                        Identified user stories and created and prioritized Jira tickets to finish version 2.0.  Redesigned look and feel of app to reflect Material Design principles. Created onboarding process to make sure new users could efficiently and effectively start using the product.</p>
-                                    <p>Collaborated with design and development teams to contribute in design, QA, and market research tasks. Facilitated leadership (specifically director of development) in completing tasks to launch app on Intuit App Store.</p>
-                                    <p>Created figma wireframes, simplifying complex procedures for industry specific user personas and followed Material Design principles to fast track design process.</p>
-                                    <p>Presented concepts and final deliverables to Product, Design, and Engineering teams, and executive stakeholders, with strong rationale for design directions and solutions. Collaborated with a variety of stakeholders, departments, and internal customers, winning confidence and building relationships that promoted partnership. Delivered on deadlines while managing multiple tracks of work.</p>
+                                    <p>I also worked with developers to take a half finished SaaS product to a new and improved version 2.0. To streamline the effort, I redesigned the look and feel of the app to reflect Material Design principles. We then launched the web app on the Intuit App Store.</p>
+                                    <p> Around this time, I also worked with a business partner on an MVP version of a project management and time tracking web app. The goal was to test the market using lean startup principles and to learn if this product would be viable in the marketplace. We found that users were relatively comfortable with piece mealing various web apps together to fulfill their needs and that unless a new product could combine a CRM, Project/Task Management, Time Tracking, and Invoicing, all in one soltuion, they weren't willing to jump away from what was currently working for them. At that time, based on these findings, we decided to not pursue the effort further.</p>
                                 </article>
                                 <!-- end experience description article -->
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2016 - 2018</p>
+                                        <p class="coda-time-interval">2015 - 2017</p>
                                         <h3>Efficiency Analyst</h3>
                                     </header>
                                     <p>Interviewed department heads to discuss potential solutions to specific inefficiencies, created lists of requirements, architected business workflows/systems, designed user interfaces with user experience elements in mind, tested and deployed solutions with documentation, continually striving to create long-term solutions instead of easy fixes.</p>
@@ -1127,14 +1124,6 @@
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">categories:</dt>
                                             <dd class="coda-description-data">Other Ventures</dd>
-                                        </div>
-                                        <div class="coda-description-item">
-                                            <dt class="coda-description-name">project by:</dt>
-                                            <dd class="coda-description-data">Ben Tissell & Roman Kolyvanov</dd>
-                                        </div>
-                                        <div class="coda-description-item">
-                                            <dt class="coda-description-name">launched:</dt>
-                                            <dd class="coda-description-data">september 2016</dd>
                                         </div>
                                     </dl>
                                 </footer>
