Updated the Efficiency Analyst experience section as well as the mortgage application project section
Updated the copy for both the efficiency analyst work experience section, as well as the "Online Mortgate Application User Testing" project section.

--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
                                         <p class="coda-time-interval">2017 - 2018</p>
                                         <h3>Product Manager</h3>
                                     </header>
-                                    <p>I used to work for a DSD / Warehouse Management Software company where I launched a Learning Management System/Training Center for new and current clients of their enterprise software 
+                                    <p>I used to be on the product team for a DSD / Warehouse Management Software company where I launched a Learning Management System/Training Center for new and current clients of their enterprise software 
                                         by developing a website that included software documentation, FAQs, a video library, and a 
                                         comprehensive implementation process involving over 20 training videos that I scripted and produced using 
                                         Premiere Pro.</p>
-                                    <p>I also worked with developers to take a half finished SaaS product to a new and improved version 2.0. To streamline the effort, I redesigned the look and feel of the app to reflect Material Design principles. We then launched the web app on the Intuit App Store.</p>
+                                    <p>I also worked with developers to take a half finishe d SaaS product to a new and improved version 2.0. To streamline the effort, I redesigned the look and feel of the app to reflect Material Design principles. We then launched the web app on the Intuit App Store.</p>
                                     <p> Around this time, I also worked with a business partner on an MVP version of a project management and time tracking web app. The goal was to test the market using lean startup principles and to learn if this product would be viable in the marketplace. We found that users were relatively comfortable with piece mealing various web apps together to fulfill their needs and that unless a new product could combine a CRM, Project/Task Management, Time Tracking, and Invoicing, all in one soltuion, they weren't willing to jump away from what was currently working for them. At that time, based on these findings, we decided to not pursue the effort further.</p>
                                 </article>
                                 <!-- end experience description article -->
@@ -306,10 +306,10 @@
                                         <p class="coda-time-interval">2015 - 2017</p>
                                         <h3>Efficiency Analyst</h3>
                                     </header>
-                                    <p>Interviewed department heads to discuss potential solutions to specific inefficiencies, created lists of requirements, architected business workflows/systems, designed user interfaces with user experience elements in mind, tested and deployed solutions with documentation, continually striving to create long-term solutions instead of easy fixes.</p>
-                                    <p>Created complex systems to solve pain points throughout the district that resulted in successful efficiency growth including hundreds of hours of work saved through automation.</p>
+                                    <p>Working for a public school district was super interesting. My job involved finding ways to make the district more efficient on a district level. The idea was to leverage technology to save money and time, especially in recurring processes (like state funds reporting, for example).</p>
+                                    <p>I leveraged Google App Script (a utility that sits a layer above the Gooogle Suite and connects apps like Google Sheets, Docs, and Gmail by using HTML and Javascript) to create complex systems that solved pain points throughout the district that resulted in successful 25% efficiency growth including hundreds of hours of work saved through automation.</p>
                                     <p>Solutions included: an Administrative Leave Reporting Tool, a District Calendaring System for schools and HR, a district-wide State Reporting Time-Triggered Auto-Email Reminder System, a Student Safety Check In/Out System used throughout the district, a Project & Task Manager Tool, as well as Input Systems that gathered data district-wide for reporting and data mining purposes.</p>
-                                    <p>Completed multiple large-scale state reports and audits involving over 100,000 records yearly.</p>
+                                    <p>Obviously, a nerd's playground!</p>
                                 </article>
                                 <!-- end experience description article -->
                             </div>
@@ -868,7 +868,9 @@
                                 <header class="coda-pop-up-header">
                                     <h3>Online Mortgage Application User Testing</h3>
                                 </header>
-                                <p>Description coming soon!</p>
+                                <p>Our client asked us to test the user experience between their product and several major products that were already on the market. We created a comprehensive testing plan that involved 3-hour long user testing sessions.</p>
+                                <p>The test sessions were 3 hours long because we had the test subjects actually apply for a mortgage using both our client's product as well as for one of the competitor's products (we did not tell the test subject which product was our client's and we alternated which one the test subject completed first), which meant we had to find a very specific cohort of test subjects that were actually looking to buy a house, and we had to find unique ways of marketing and incentives to intrigue the ideal candidates.</p>
+                                <p>After the testing was concluded, we compiled comprehensive reports that broke down the findings for each milestone of the mortgage application process, and listed out specific UX improvements that our client could implement to improve their product and make the experience better than any of their competitor's.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
