Updating text to include efficiency expert verbiage
Updating text to include efficiency expert verbiage

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="row align-items-center vh100">
                             <div class="col-md-6 col-10">
                                 <!-- profession -->
-                                <p class="coda-profession">Digital Product Management & UX Design</p>
+                                <p class="coda-profession">Efficiency Expert</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
                                 <h1 class="coda-name">Roman Kolyvanov</h1>
@@ -219,7 +219,7 @@
                             I believe digital products will continue to transform our lives for the better and it makes me super happy that I get to contribute to that! <br><br><br><br><br>
 
                             <h4>2. I like <span class="coda-underscore coda-active">DIGGING</span> into complex problems</h4><br>
-                            There's nothing like learning about the ins and outs of a problem, of looking at it from every angle, and of coming up with a solution that 
+                            There's nothing like learning the ins and outs of a problem, of looking at it from every angle, and of coming up with a solution that 
                             not only resolves the pain point, but takes the user's experience from just "fixed" to absolutely delightful. It takes a certain type of curiosity 
                             to not be afraid of the unknown; to jump into the abyss, to follow lines of thinking and questions through to their end. And then to finally gain perspective 
                             and deep, contextual understanding; to begin to see the larger systems at play that exist outside the realm of the initial problem.. Yeah, I like that stuff. :)  <br><br><br><br><br>
@@ -322,7 +322,7 @@
                                     </header>
                                     <p>I'm currently working at a pretty darn cool digital product agency called Ventive. We build apps for clients in a variety of different industries and capacities.</p>
                                     <p>In my role, I lead teams of UX/UI and visual designers, technical project managers, lead engineers, and BE/FE developers to take our client's vision from the back of the napkin to the real deal. I absolutely love getting to know the industry and people that my products apply to, and collaborating with everyone involved in building out the product.</p>
-                                    <p>Right now, I'm working on 3 different projects that apply to 3 completely different industries: Optometry, Residential Real Estate, and Medical Supply Ordering.</p>
+                                    <p>Right now, I'm working on 4 different projects that apply to 3 completely different industries: Eyecare, Workflow Management, and Medical Supply Ordering.</p>
 
                                 </article>
                                 <!-- end experience description article -->
@@ -658,17 +658,11 @@
                                 <p>I merge Business Process Analysis and Design to create functional yet beautiful digital products. Let's write you a digital symphony.</p>
                                     
                                 <p>I’m a learner, a communicator, and a creative.</p>
-                                    
-                                <p>Also, I'm a husband, and a father of two.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
-                                            <dt class="coda-description-name">date of birth:</dt>
-                                            <dd class="coda-description-data">11 october 1987</dd>
-                                        </div>
-                                        <div class="coda-description-item">
                                             <dt class="coda-description-name">profession:</dt>
-                                            <dd class="coda-description-data">Digital Product Development</dd>
+                                            <dd class="coda-description-data">Business Process Implementation & Efficiency Analysis</dd>
                                         </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">languages spoken:</dt>
