Minor updates for 2021
Updated verbiage and year as well as some of the images.

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="row align-items-center vh100">
                             <div class="col-md-6 col-10">
                                 <!-- profession -->
-                                <p class="coda-profession">Efficiency Expert</p>
+                                <p class="coda-profession">Product Management</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
                                 <h1 class="coda-name">Roman Kolyvanov</h1>
@@ -322,7 +322,7 @@
                                     </header>
                                     <p>I'm currently working at a pretty darn cool digital product agency called Ventive. We build apps for clients in a variety of different industries and capacities.</p>
                                     <p>In my role, I lead teams of UX/UI and visual designers, technical project managers, lead engineers, and BE/FE developers to take our client's vision from the back of the napkin to the real deal. I absolutely love getting to know the industry and people that my products apply to, and collaborating with everyone involved in building out the product.</p>
-                                    <p>Right now, I'm working on 4 different projects that apply to 3 completely different industries: Eyecare, Workflow Management, and Medical Supply Ordering.</p>
+                                    <p>Right now, I'm working on 4 different projects that apply to completely different industries: Eyecare, Trucking, Diamond Manufacturing, and Medical Supply Ordering.</p>
 
                                 </article>
                                 <!-- end experience description article -->
@@ -599,7 +599,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 col-12">
-                            <p class="coda-footer-copyright">Copyright &copy; 2020</p>
+                            <p class="coda-footer-copyright">Copyright &copy; 2021</p>
                         </div>
                         <div class="col-md-6 col-12">
                             <h4 class="coda-footer-info">roman@kolyvanov.com</h4>
@@ -645,7 +645,7 @@
                     <div class="row justify-content-between">
                         <div class="col-md-6 col-lg-5 col-12 order-md-first order-last">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/samyandi.jpg" alt="samyandi">
+                                <img class="coda-img-responsive" src="img/roman2021.jpg" alt="Roman2021">
                             </div>
                         </div>
                         <div class="col-md-5 col-12 order-md-last order-first">
@@ -655,14 +655,16 @@
                                 </header>
                                 <p>From websites, to web & mobile apps, to complex content and data management systems, I am passionate about designing and building digital products and solutions that change people's lives for the better.</p> 
 
-                                <p>I merge Business Process Analysis and Design to create functional yet beautiful digital products. Let's write you a digital symphony.</p>
+                                <p>I merge Business Process Analysis and Design to create functional yet beautiful digital products.</p>
                                     
                                 <p>I’m a learner, a communicator, and a creative.</p>
+
+                                <p>Let's write you a digital symphony.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">profession:</dt>
-                                            <dd class="coda-description-data">Business Process Implementation & Efficiency Analysis</dd>
+                                            <dd class="coda-description-data">product management & ownership</dd>
                                         </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">languages spoken:</dt>
