Updating the header image

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/roma8.jpg);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/newtwo.JPG);" >
                 <!-- header background image -->
-                <img class="coda-background-img" align=right src="img/roma8.jpg" alt="header image">
+                <img class="coda-background-img" align=right src="img/newtwo.JPG" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
@@ -173,13 +173,13 @@
                         <div class="row align-items-center vh100">
                             <div class="col-md-6 col-10">
                                 <!-- profession -->
-                                <p class="coda-profession">Product Management</p>
+                                <p class="coda-profession" style="text-align: right;">Product Management</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
-                                <h1 class="coda-name">Roman Kolyvanov</h1>
+                                <h1 class="coda-name" style="text-align: right;">Roman Kolyvanov</h1>
                                 <!-- end first name, last Name -->
                                 <!-- "About me" button -->
-                                <a href="#about" class="coda-underscore coda-pop-up-btn">learn more about me<i class="coda-left-arrow-ico"></i></a>
+                                <a href="#about" class="coda-underscore coda-pop-up-btn" style="text-align: right;">learn more about me<i class="coda-left-arrow-ico"></i></a>
                                 <!-- end "About me" button -->
                             </div>
                         </div>
@@ -599,7 +599,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 col-12">
-                            <p class="coda-footer-copyright">Copyright &copy; 2021</p>
+                            <p class="coda-footer-copyright">Copyright &copy; 2023</p>
                         </div>
                         <div class="col-md-6 col-12">
                             <h4 class="coda-footer-info">roman@kolyvanov.com</h4>
@@ -645,7 +645,7 @@
                     <div class="row justify-content-between">
                         <div class="col-md-6 col-lg-5 col-12 order-md-first order-last">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/roman2021.jpg" alt="Roman2021">
+                                <img class="coda-img-responsive" src="img/NewOne.JPG" alt="Roman2023">
                             </div>
                         </div>
                         <div class="col-md-5 col-12 order-md-last order-first">
