--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <!-- Start Header -->
             <header id="coda-about" class="coda-header" style="background-image: url(img/newtwo.JPG);" >
                 <!-- header background image -->
-                <img class="coda-background-img" align=right src="img/newtwo.JPG" alt="header image">
+                <img class="coda-background-img" align="left" src="img/newtwo.JPG" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
